Extracting bar title to resources

--- a/UnsplashApp/app/src/main/res/values/strings.xml
+++ b/UnsplashApp/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">UnsplashApp</string>
 
     <string name="search_field_hint">Search</string>
+    <string name="image_search_title">Image search</string>
 </resources>
