--- a/UnsplashApp/app/src/main/res/values/strings.xml
+++ b/UnsplashApp/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">UnsplashApp</string>
 
-    <string name="search_field_hint">Start typing to search</string>
+    <string name="search_field_hint">Type three characters or more to search</string>
     <string name="image_search_title">Image search</string>
     <string name="empty_search_result">No images were found, try with something else!</string>
     <string name="search_error">Something went wrong, try again later.</string>
